# search.elixpo

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  README.md  SECURITY.md  deploy.sh  docker-compose.yml  dump.rdb  entrypoint.sh  nginx.conf  openapi.yaml  requirements.txt
.github/workflows/: ci.yml
DOCS/: DEPLOYMENT_AS_OF_NOW.md  FULL_ARCHITECTURE.md  SESSION_PERSISTENCE_FIX.md  SESSION_PERSISTENCE_IMPLEMENTATION.md
bash_scripts/deploy_bash/: redis_chroma_postgress.sh
docker_setup/: .env.prod  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/paper/: arXiv_research_paper.fdb_latexmk  arXiv_research_paper.tex  architecture.tex  architecture_inline.tex  lix_cache_paper.aux  lix_cache_paper.fdb_latexmk  lix_cache_paper.fls  lix_cache_paper.tex  paper.tex
lix_chat/: README.md  pyproject.toml
lix_chat/lix_chat/: __init__.py
lix_chat/lix_chat/lix_cache/: config.py  huffman_codec.py  hybrid_cache.py  redis_pool.py
lix_open_cache/: pyproject.toml
lix_open_cache/lix_open_cache/: __init__.py  context_window.py  conversation_archive.py  coordinator.py  hybrid_cache.py  redis_pool.py  semantic_cache.py
lix_open_search/: pyproject.toml
lix_open_search/lix_open_search/: __init__.py
lixsearch/: README.md
lixsearch/app/: main.py  utils.py
lixsearch/app/gateways/: chat.py  completions.py  content.py  discover.py  export.py  image.py  search.py  session.py  surf.py  websocket.py
lixsearch/chatEngine/: chat_engine.py
lixsearch/commons/: searching_based.py
lixsearch/functionCalls/: generateImage.py  generatePDF.py  getImagePrompt.py  getYoutubeDetails.py
lixsearch/ipcService/: coreEmbeddingService.py  main.py
lixsearch/monitorService/: alerting.py  main.py
lixsearch/monitorService/collectors/: docker_stats.py  ipc_health.py  request_metrics.py
lixsearch/pipeline/: config.py  deep_search.py  discover_prompt.py  helpers.py  instruction.py  lixsearch.py  optimized_tool_execution.py  searchPipeline.py  sse_messages.py  synthesis.py  tools.py
lixsearch/ragService/: __init__.py  cacheCoordinator.py  embeddingService.py  embeddingServiceClient.py  ragEngine.py  retrievalPipeline.py  retrievalSystem.py  semanticCacheRedis.py  vectorStore.py
lixsearch/searching/: fetch_full_text.py  main.py
lixsearch/sessions/: conversation_archive.py  conversation_cache.py  huffman_codec.py  hybrid_conversation_cache.py  sessionData.py  session_manager.py
package/: README.md  docker-compose.yml  pyproject.toml
package/lix_open_cache/: coordinator.py  semantic_cache.py
package/lix_open_cache_pkg/: README.md  pyproject.toml
package/lix_open_cache_pkg/lix_open_cache/: __init__.py  config.py  context_window.py  conversation_archive.py  coordinator.py  hybrid_cache.py
package/lix_open_search_pkg/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
package/lix_open_search_pkg/lix_open_search/: client.py  models.py
public/blog/: pdf-export.md
public/docs/: CACHING_EMBEDDINGS_ARCHITECTURE.md  FULL_ARCHITECTURE.md  HYBRID_CONVERSATION_STORAGE_ANALYSIS.md  PARALLEL_WORKERS_ARCHITECTURE.md
search.elixpo/: .env.example  .env.local  deploy.sh  gulpfile.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  wrangler.toml
search.elixpo/.next/: routes-manifest.json
search.elixpo/prisma/: schema.prisma
search.elixpo/src/: instrumentation.ts
search.elixpo/src/app/: globals.css  layout.tsx  page.tsx
search.elixpo/src/app/api/auth/callback/: route.ts
search.elixpo/src/app/api/auth/login/: route.ts
search.elixpo/src/app/api/conversations/: route.ts
search.elixpo/src/app/api/conversations/[sessionId]/: route.ts
search.elixpo/src/app/api/discover/: route.ts
search.elixpo/src/app/api/search/: route.ts
search.elixpo/src/app/api/session/: route.ts
search.elixpo/src/app/api/surf/: route.ts
search.elixpo/src/app/c/[sessionId]/: page.tsx
search.elixpo/src/app/discover/: page.tsx
search.elixpo/src/app/discover/[category]/: page.tsx
search.elixpo/src/app/docs/: page.tsx
search.elixpo/src/app/paper/: page.tsx
search.elixpo/src/components/: DiscoverCategoryContent.tsx  DiscoverContent.tsx  HomeContent.tsx  LandingPage.tsx  LibraryContent.tsx  SettingsContent.tsx
search.elixpo/src/components/discover/: CategoryPage.tsx  DiscoverHub.tsx
search.elixpo/src/components/layout/: SidePanel.tsx  Sidebar.tsx
search.elixpo/src/components/search/: ImageGallery.tsx  MessageSection.tsx  SearchInput.tsx  SearchResults.tsx  SourceCards.tsx  StreamingText.tsx
search.elixpo/src/components/ui/: GlassCard.tsx  IconButton.tsx  LoadingDots.tsx
search.elixpo/src/hooks/: useAuth.ts  useSSESearch.ts  useSession.ts
search.elixpo/src/lib/: api.ts  auth.ts  conversationCache.ts  db.ts  sse-parser.ts  theme.ts
search.elixpo/src/types/: index.ts
search.elixpo/workers/migrations/: 0001_init.sql  0002_users.sql
tester/: search_test_local.py  test_completions.py  test_completions_v2.py  test_multi_turn_session.py  test_redis_semantic_cache.py  test_session_persistence.py
tester/searchService/: search_tester.py
(+3 files in other folders)
