[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lix-open-cache"
version = "0.1.0"
description = "Reusable session management and multi-layer Redis caching for conversational AI"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0",
    "numpy>=1.24",
    "loguru>=0.7",
]

[project.optional-dependencies]
lz4 = ["lz4>=4.0"]

[tool.setuptools.packages.find]
include = ["lix_open_cache*"]
