[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lix-open-search"
version = "0.1.0"
description = "Python client SDK for lixSearch — multi-tool AI search with web, video, image, and deep research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ayushman Bhattacharya"}]
keywords = ["search", "ai", "rag", "llm", "openai-compatible", "web-search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/elixpo/lixSearch"
Documentation = "https://github.com/elixpo/lixSearch/blob/main/lix_open_search/README.md"

[tool.setuptools.packages.find]
include = ["lix_open_search*"]
