[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lix-open-search"
version = "0.1.0"
description = "Python client SDK for lixSearch — multi-tool AI search with web, video, image, and deep research"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ayushman Bhattacharya"}]
keywords = ["search", "ai", "rag", "llm", "openai-compatible", "web-search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
    "redis>=5.0",
    "numpy>=1.24",
    "loguru>=0.7",
]

[project.optional-dependencies]
lz4 = ["lz4>=4.0"]

[project.urls]
Homepage = "https://search.elixpo.com"
Repository = "https://github.com/Circuit-Overtime/lixSearch"
Documentation = "https://github.com/Circuit-Overtime/lixSearch/blob/main/package/README.md"
"Docker Hub" = "https://hub.docker.com/r/elixpo/lixsearch"
"Research Paper" = "https://github.com/Circuit-Overtime/lixSearch/blob/main/docs/paper/lix_cache_paper.pdf"

[tool.setuptools.packages.find]
include = ["lix_open_search*", "lix_open_cache*"]
