[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lix-open-cache"
version = "2.1.4"
description = "Multi-layer Redis caching + Huffman disk archival for conversational AI — session memory, semantic deduplication, and compressed storage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ayushman Bhattacharya"}]
keywords = ["cache", "redis", "session", "conversational-ai", "huffman", "rag"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "redis>=5.0",
    "numpy>=1.24",
    "loguru>=0.7",
]

[project.optional-dependencies]
lz4 = ["lz4>=4.0"]

[project.urls]
Homepage = "https://search.elixpo.com"
Repository = "https://github.com/Circuit-Overtime/lixSearch"
Documentation = "https://github.com/Circuit-Overtime/lixSearch/blob/main/package/lix_open_cache_pkg/README.md"
"Research Paper" = "https://github.com/Circuit-Overtime/lixSearch/blob/main/docs/paper/lix_cache_paper.pdf"

[tool.setuptools.packages.find]
include = ["lix_open_cache*"]
